[package]
name = "terror"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.66.0"
clap = { version = "4.5.20", features = ["derive"] }
chrono = "0.4.39"
flate2 = "1.0"
glob = "0.3.1"
indicatif = "0.17.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
toml = "0.5"